package domain;

public enum DishCategory {
    STARTER,
    MAIN_COURSE,
    DESSERT,
    DRINK
}

