package domain;

public enum PaymentMethod {
    EXTERNAL, STUDENT_CREDIT
}
