@startuml
title SophiaTech Eats — Domain Class Diagram (Clean)

skinparam classAttributeIconSize 0

' ==== Enums ====
enum DishCategory {
STARTER
MAIN_COURSE
DESSERT
DRINK
}
enum OrderStatus {
CREATED
PAID
DELIVERED
CANCELLED
}
enum PaymentMethod {
EXTERNAL
STUDENT_CREDIT
}
enum DietaryTag {
VEGAN
VEGETARIAN
GLUTEN_FREE
LACTOSE_FREE
}

' ==== Core domain only essential attributes ====
abstract class User {
  - id: String
  - name: String
  - email: String
}

class CampusUser {
  - country: String
  - studentCredit: StudentCredit
}

User <|-- CampusUser
class StudentCredit {
 - budget: double
 - blocked: boolean
}

class Cart {
- id: String
- createdAt: LocalDateTime
}

class Order {
  - id: String
  - createdAt: LocalDateTime
  - total: double
  - status: OrderStatus
  - paidAt: LocalDateTime
  - deliveredAt: LocalDateTime
}

class OrderItem {
- quantity: int
}

class Payment {
  - amount: double
  - method: PaymentMethod
  - success: boolean
  - provider: String
  - redirectUrl: String
}

class Restaurant {
  - id: String
  - name: String
  - cuisine: String
  - priceRange: String
  - open: boolean
}

class DeliverySlot {
  - label: String
  - start: LocalDateTime
  - capacity: int
  - reserved: int
}

class DeliveryLocation {
- name: String
- description: String
}

class Dish {
  - id: String
  - name: String
  - description: String
  - price: double
  - category: DishCategory
  - tag: DietaryTag
}
class ExtraOption {
- name: String
- price: double
}

CampusUser "1" o-- "0..1" StudentCredit : owns
CampusUser "1" -- "0..*" Order : orderHistory
CampusUser "1" -- "0..1" Cart : currentCart {derived}

Cart *-- "0..*" OrderItem : contains
Cart ..> Order : converts to

note on link
  Operation: OrderService.placeOrder(cart, deliveryPlace, deliveryTime)
  This is an operational conversion (no persistent reference
  between Cart and Order in the domain model).
end note

Order *-- "1..*" OrderItem : contains
Order *-- "0..1" Payment : paidBy

DeliveryLocation "0..*" -- "1" Order : referencedBy

OrderItem "1" -- "1" Dish : itemOf
OrderItem "0..*" -- "0..*" ExtraOption : chosenOptions

Restaurant "1" o-- "1..*" DeliverySlot : defines slots
Restaurant "1" o-- "1..*" Dish : offers

Dish "0..*" o-- "0..*" ExtraOption : availableOptions

note right of Order
  Scheduling (assignment to DeliverySlot / DeliveryLocation)
  is resolved by DeliveryCatalogRepository / OrderService.
  Order stores deliveryPlace as a \`DeliveryLocation\` reference and deliveryTime as a value.
  DeliverySlot assignment is resolved by services; slots are not owned by Order.
end note



@enduml